syntax = "proto3";
import "base.proto";
option go_package = "./;proto";

service Address{
    rpc GetAddressList(AddressRequest) returns(AddressListResponse); //查看地址
    rpc CreateAddress(AddressRequest) returns(AddressResponse); //新增地址
    rpc DeleteAddress(AddressRequest) returns(Empty); //删除地址
    rpc UpdateAddress(AddressRequest) returns(Empty); //修改地址
}

message AddressRequest{
    int32 id = 1;
    uint32 userId = 2;
    string province = 3;
    string city = 4;
    string district = 5;
    string address = 6;
    string signerName = 7;
    string signerMobile = 8;
}

message  AddressResponse{
    uint32 id = 1;
    uint32 userId = 2;
    string province = 3;
    string city = 4;
    string district = 5;
    string address = 6;
    string signerName = 7;
    string signerMobile = 8;
    uint32 addTime=9;
}


message AddressListResponse {
    int32 total = 1;
    repeated AddressResponse data = 2;
}
